# codex-claude-orchestrator

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.cco/jobs/: registry.json
.cco/jobs/20260417T035117Z-search/: meta.json  worker_prompt.txt
.cco/jobs/20260417T035117Z-search/claude_runtime/: .claude.json
.cco/jobs/20260417T035117Z-search/claude_runtime/backups/: .claude.json.backup.1776397877809
.cco/jobs/20260417T035117Z-search/claude_runtime/projects/-home-roxy-codex-claude-orchestrator-sdk/: 9011e263-9a37-4684-ab4f-15b260e03ba5.jsonl
.cco/jobs/20260417T061001Z-search/: meta.json  worker_prompt.txt
.cco/jobs/20260417T061001Z-search/claude_runtime/: settings.json
codex_claude_orchestrator/: __init__.py  claude_client.py  cli.py  codex_client.py  config.py  dispatch.py  hook.py  mcp_server.py  models.py  prompts.py  registry.py  router.py  server.py  util.py
codex_claude_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: AGENTS.md  CLAUDE.md
examples/.claude/: settings.json
scripts/: cco-base  install-cco-service
